Update Blog “연뮤로그-개발기-1-기획과-디자인”

--- a/content/blog/연뮤로그-개발기-1-기획과-디자인.md
+++ b/content/blog/연뮤로그-개발기-1-기획과-디자인.md
@@ -8,7 +8,7 @@ description: "개인 프로젝트를 직접 기획하고 디자인해보기 "
 
 아직 부족하지만 꾸준히 업데이트해서 잘 키워보겠습니다. 혹시 피드백이 있으시다면 [인스타그램 DM](https://www.instagram.com/yeonmulog/)으로 부탁드립니다. 언제나 감사합니다. 
 
-\[‎연뮤로그 다운로드 링크](https://apps.apple.com/kr/app/%EC%97%B0%EB%AE%A4%EB%A1%9C%EA%B7%B8/id6443663023
+[‎연뮤로그 다운로드 링크](https://apps.apple.com/kr/app/%EC%97%B0%EB%AE%A4%EB%A1%9C%EA%B7%B8/id6443663023)
 
 # 아이디어의 시작
 
@@ -47,7 +47,7 @@ H도 비공개로 따로 트위터에 타래로 정리하던 걸 보여주면서
 초기 컨셉에서 가장 중요하게 잡았던 부분은 크게 세 가지였습니다. 
 
 <aside>
-1️⃣ 관극한 날짜에 해당 공연 포스터가 들어가게, 하지만 PL@Y 앱과는 \*\*\*다른 방식으로 포스터 보여주기\*\*\*!
+1️⃣ 관극한 날짜에 해당 공연 포스터가 들어가게, 하지만 PL@Y 앱과는 다른 방식으로 포스터 보여주기
 
 </aside>
 
@@ -88,8 +88,6 @@ FSCalendar 라이브러리를 이용했는데요.
 ![Untitled](../assets/screen-shot-2022-10-09-at-14.11.06.png)
 
 날짜가 안보이니까 이상해 보이는걸까..? 싶어서 날짜를 가리지 않고 위로 올리기로 결정합니다. 
-
-
 
 ### 2) 날짜 밑에 포스터가 들어가는 캘린더셀
 
@@ -160,7 +158,7 @@ FSCalendar 라이브러리를 이용했는데요.
 
 ![Untitled](../assets/screen-shot-2022-10-09-at-13.14.19.png)
 
-연뮤로그의 로고는 앱 이름의 초성을 형상화했는데요. **연뮤**는 연극과 뮤지컬을 의미하고, **로그**는 기록을 의미하는 한자 록(***\*錄),\**** 기록하다라는 뜻의 log, 나에게 보내기처럼 작성하는 형태이기 때문에 독백을 의미하는 monologue에서 따왔습니다. 
+연뮤로그의 로고는 앱 이름의 초성을 형상화했는데요. **연뮤**는 연극과 뮤지컬을 의미하고, **로그**는 기록을 의미하는 한자 록(**\*\*錄),\*\*** 기록하다라는 뜻의 log, 나에게 보내기처럼 작성하는 형태이기 때문에 독백을 의미하는 monologue에서 따왔습니다. 
 
 그렇다보니 연뮤로그의 로고 중 ‘ㄹ’부분이 후기를 쓰는 사용자를 표현할 수 있다는 생각이 들었어요. 
 
@@ -207,8 +205,6 @@ FSCalendar 라이브러리를 이용했는데요.
 ![Untitled](../assets/screen-shot-2022-10-09-at-13.11.49.png)
 
 손으로 슥슥 가볍게 그려 추가했습니다. 앱의 새로운 피쳐들을 업데이트 하면서 온보딩의 내용도 추가하고, 일러스트도 좀 더 완성도를 높여 추가할 예정입니다.  
-
-
 
 ## 통계 탭도 추가
 
