--- a/content/blog/연뮤로그-개발기-1-기획과-디자인.md
+++ b/content/blog/연뮤로그-개발기-1-기획과-디자인.md
@@ -6,6 +6,8 @@ description: "개인 프로젝트를 직접 기획하고 디자인해보기 "
 ---
 시작하기에 앞서, 연극과 뮤지컬을 보고난 후 스스로에게 말하듯 후기를 적을 수 있는 앱 연뮤로그가 10월 7일 금요일에 1.0 버전을 첫 출시 했습니다. 💕
 
+
+
 아직 부족하지만 꾸준히 업데이트해서 잘 키워보겠습니다. 혹시 피드백이 있으시다면 [인스타그램 DM](https://www.instagram.com/yeonmulog/)으로 부탁드립니다. 언제나 감사합니다. 
 
 [‎연뮤로그 다운로드 링크](https://apps.apple.com/kr/app/%EC%97%B0%EB%AE%A4%EB%A1%9C%EA%B7%B8/id6443663023)
@@ -14,7 +16,7 @@ description: "개인 프로젝트를 직접 기획하고 디자인해보기 "
 
 연뮤로그는 새싹 2기 iOS 부트캠프에서 진행한 개인 출시 프로젝트인데요. 처음 프로젝트를 시작할 때 즈음 눈앞에 들어왔던 책은 바로 이 책이었습니다. 
 
-![<기록집 100, 보고 쓰고 그린 100편의 공연>](../assets/untitled-25-.png)
+![<기록집 100, 보고 쓰고 그린 100편의 공연>](../assets/untitled25.png)
 
 <기록집 100, 보고 쓰고 그린 100편의 공연>
 
