Update Blog “연뮤로그-개발기-1-기획과-디자인”

--- a/content/blog/연뮤로그-개발기-1-기획과-디자인.md
+++ b/content/blog/연뮤로그-개발기-1-기획과-디자인.md
@@ -10,8 +10,6 @@ description: "출시 프로젝트를 직접 기획하고 디자인해보기 "
 
 [‎연뮤로그 다운로드 링크](https://apps.apple.com/kr/app/%EC%97%B0%EB%AE%A4%EB%A1%9C%EA%B7%B8/id6443663023)
 
-
-
 - - -
 
 # 아이디어의 시작
@@ -36,8 +34,6 @@ H와는 18년도에 키다리아저씨 회전문을 함께 돌면서 (저는 거
 
 H도 비공개로 따로 트위터에 타래로 정리하던 걸 보여주면서 앱개발에 대한 아이디어를 나눠주었습니다. 덕분에 앱의 방향성에 대해 많은 도움을 받을 수 있었어요. 업데이트 예정 중에 **개발자소개** 페이지가 있는데, 이 화면에서 따로 헌사하기로 약속했습니다. 
 
-
-
 # 초기 컨셉 1.0
 
 그래서 처음 아이디어는 아래와 같았습니다. 정확히는 새싹의 멘토님들께 피드백 받은 내용을 반영한 컨셉인데요. 본래는 하루에 낮공,밤공을 다 볼 경우를 생각만 하고 기획에는 적용을 안했는데 바로 그 부분을 캐치해서 피드백을 해주셨습니다. 그 피드백을 적용한 화면이에요.
@@ -51,8 +47,6 @@ H도 비공개로 따로 트위터에 타래로 정리하던 걸 보여주면서
 달력 위 포스터를 클릭하면 썼던 후기들을 볼 수 있고, 채팅창처럼 후기를 쓸 수 있어요.
 
 초기 컨셉에서 가장 중요하게 잡았던 부분은 크게 세 가지였습니다. 
-
-
 
 <aside>
 1️⃣ 관극한 날짜에 해당 공연 포스터가 들어가게, 하지만 PL@Y 앱과는 다른 방식으로 포스터 보여주기
@@ -69,11 +63,7 @@ H도 비공개로 따로 트위터에 타래로 정리하던 걸 보여주면서
 
 </aside>
 
-
-
 열심히 관극해서 캘린더를 포스터로 채우는 것도 기분 좋을 것 같고, 공연 날짜를 클릭해서 채팅처럼 쓸 수 있는 후기도 좋고, 목록으로 모아볼 수 있는 것도 좋아서 *‘이대로 구현만 하면 되겠다!’* 하고 마음을 놓고 있었습니다. 하지만 제 개발운명에 처음으로 드리워진 암운을, 저는 보지 못했던 거죠… 
-
-
 
 ## 일주일동안의 FS캘린더 삽질
 
@@ -87,11 +77,7 @@ PL@Y의 경우 이렇게 캘린더를 통으로 한 탭에 쓰고 있는데요. 
 
 위 두가지를 합쳐서 구현하다보니, 흡사 징그럽게도 느껴질 캘린더가 되고 맙니다.
 
-
-
 ## 환공포를 유발하는 캘린더 이미지 썸네일
-
-
 
 ### 1) 관극한 공연의 포스터로 날짜를 덮어버리는 캘린더 셀 디자인
 
@@ -104,8 +90,6 @@ FSCalendar 라이브러리를 이용했는데요.
 ![Untitled](../assets/screen-shot-2022-10-09-at-14.11.06.png)
 
 날짜가 안보이니까 이상해 보이는걸까..? 싶어서 날짜를 가리지 않고 위로 올리기로 결정합니다. 
-
-
 
 ### 2) 날짜 밑에 포스터가 들어가는 캘린더셀
 
@@ -128,8 +112,6 @@ FSCalendar 라이브러리를 이용했는데요.
 * 아니 근데 전월과 명월이 같이 캘린더로 보이길래 보여주고 싶어서 [FSCalendar의 이슈 #372](https://github.com/WenchaoD/FSCalendar/issues/372)의 댓글을 참고했는데요 
 
 ![Untitled](../assets/screen-shot-2022-10-09-at-12.05.31.png)
-
-
 
 제가 willDisplay 메서드에서 포스터 이미지를 셀에 넣는데요. 이게 안보이게 됩니다. 
 
@@ -155,8 +137,6 @@ FSCalendar 라이브러리를 이용했는데요.
 
 일단 연뮤로그 1.0 버전에서는 심장을 도려내는 마음으로ㅠ 달력뷰를 뺐는데요. 아래 컨셉 2.0의 네비게이션 바 타이틀을 보시면 유추할 수 있을 것 같아요. **달력으로 보기**도 넣을거거든요! 일단 캘린더 타입을 `.none`으로 하면서도 셀이 제대로 보여지도록 방법을 좀 더 찾아보겠습니다. 
 
-
-
 ## 이 쯤 되니까 직접 캘린더를 만들어야 되나 싶은데 일주일이 지나갔습니다
 
 ![Untitled](../assets/screen-shot-2022-10-09-at-12.36.19.png)
@@ -172,8 +152,6 @@ FSCalendar 라이브러리를 이용했는데요.
 
 그래서 결국 캘린더를 제외하기로 마음먹었습니다. 
 
-
-
 # 캘린더도 없고 목록보기도 없고, 리뷰말고 다 바뀐 컨셉 2.0
 
 시간이 정말 부족하지만 UI의 퀄리티는 높이고 싶었습니다. 캘린더 영역이 앱의 아이덴티티가 드러나는 부분이라고 생각했는데, 그런 캘린더를 포기하자니 무언갈 대체해야된다고 생각했어요. 
@@ -182,15 +160,11 @@ FSCalendar 라이브러리를 이용했는데요.
 
 ![Untitled](../assets/screen-shot-2022-10-09-at-13.14.19.png)
 
-
-
 연뮤로그의 로고는 앱 이름의 초성을 형상화했는데요. **연뮤**는 연극과 뮤지컬을 의미하고, **로그**는 기록을 의미하는 한자 록(**錄),** 기록하다라는 뜻의 log, 나에게 보내기처럼 작성하는 형태이기 때문에 독백을 의미하는 monologue에서 따왔습니다. 
 
 그렇다보니 연뮤로그의 로고 중 ‘ㄹ’부분이 후기를 쓰는 사용자를 표현할 수 있다는 생각이 들었어요. 
 
 그래서 아래와 같은 ‘ㄹ’ 캐릭터를 새로 만들게 되었습니다. 
-
-
 
 ![Untitled](../assets/screen-shot-2022-10-09-at-12.52.07.png)
 
@@ -226,7 +200,7 @@ FSCalendar 라이브러리를 이용했는데요.
 
 한땀 한땀 그린 마이크. 예쁘고 캐릭터에 맞는 마이크를 그리기 위해 시행착오를 많이 겪었습니다. 
 
-## 온보딩 화면새로 추가
+## 온보딩 화면 새로 추가
 
 초기 컨셉은, 정말 미니멀한 MVP로 디자인했다보니 온보딩 디자인이 없었습니다. 새로 캐릭터가 생겼다보니 이를 그림으로 만드는 건 굉장히 쉬운 일이었어요. 
 
@@ -254,15 +228,9 @@ FSCalendar 라이브러리를 이용했는데요.
 
 기획자(나)와 디자이너(나) 사이에 낀 개발자(나)의 모습은 이와 같았습니다.
 
-
-
 우리의 협업은 너무나..힘들었어요….. 이렇게 밤을 많이 새고 고민한 적이 인생에 언제 있었을까 싶어요. 
 
-
-
 ![giphy.gif](https://media2.giphy.com/media/1dIoHBbyFpWzK0Div8/giphy.gif?cid=ecf05e479g0yv31cxjhwmsa4o1r2zto0os21qmgh7tumldga&rid=giphy.gif&ct=g)
-
-
 
 우리는 서로 사이는 너무 좋았고요. 결과도 정말 맘에 들었어요.
 
@@ -270,11 +238,9 @@ FSCalendar 라이브러리를 이용했는데요.
 
 포스팅에는 쓰지 않았던 자잘자잘한 디자인 수정들… 1pt가 이상할 때마다 저는 다른 페이지도 못 만들었으면서 그 페이지에 매어있었습니다. 피그마로 미리 화면을 만들어두었지만 막상 온디바이스에서는 디자인을 고칠 부분이 눈에 많이 들어오더라고요. 
 
-
-
 그렇지만, 기획과 디자인을 바꾸고 나서 오히려 개발이 수월해질 수 있었습니다. 일단 디자인이 맘에 들게 나오니 화면 하나 만들 때마다 성취감도 컸고요.
 
-이전에 **[꽁냥 앱](https://kimdee.netlify.app/blog/%ED%95%99%EA%B5%90-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A1%9C-%EC%8B%9C%EC%9E%91%ED%95%9C-ios-%EC%95%B1-%EA%BD%81%EB%83%A5-%EB%A7%8C%EB%93%9C%EB%8A%94-%EC%9D%B4%EC%95%BC%EA%B8%B0-1-1/)**을 iOS 개발 공부하려고 처음 만들었을 때오히려 이보다 디자인이 훨씬 많았지만, 디자인에 의존하여 안되는 개발을 감춘다는 느낌을 스스로  조금 받았는데요. 오히려 디자인이 아니었다 싶을 때 개발할 수 있는 역량에 맞춰 디자인을 새로 해본 경험이 오히려 신기하고 재밌더라고요!
+이전에 **[꽁냥 앱](https://kimdee.netlify.app/blog/%ED%95%99%EA%B5%90-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A1%9C-%EC%8B%9C%EC%9E%91%ED%95%9C-ios-%EC%95%B1-%EA%BD%81%EB%83%A5-%EB%A7%8C%EB%93%9C%EB%8A%94-%EC%9D%B4%EC%95%BC%EA%B8%B0-1-1/)**을 iOS 개발 공부하려고 처음 만들었을 때 오히려 이보다 페이지가 훨씬 많았지만, 디자인에 의존춘다는 느낌을 스스로  조금 받았는데요. 오히려 개발할 수  역량에 맞춰 디자인을 새로 해본 경험이 오히려 신기하고 재밌더라고요!
 
 이제 출시 이후 업데이트에서는 한동안 기획과 디자인을 수정할 일은 없고, 이미 만들어둔 기획대로 작업하면 될 거 같아서 개발자인 저 자신이 열심히 힘을 내보면 될 것 같습니다. 
 
