--- a/content/blog/연뮤로그-개발기-1-기획과-디자인.md
+++ b/content/blog/연뮤로그-개발기-1-기획과-디자인.md
@@ -208,8 +208,6 @@ FSCalendar 라이브러리를 이용했는데요.
 
 손으로 슥슥 가볍게 그려 추가했습니다. 앱의 새로운 피쳐들을 업데이트 하면서 온보딩의 내용도 추가하고, 일러스트도 좀 더 완성도를 높여 추가할 예정입니다.  
 
-
-
 ## 통계 탭도 추가
 
 통계는 포인트가 되는 컬러만 지정하고 [Charts](https://github.com/danielgindi/Charts) 라이브러리의 기본 디자인을 그대로 사용했습니다. 
@@ -240,7 +238,7 @@ FSCalendar 라이브러리를 이용했는데요.
 
 그렇지만, 기획과 디자인을 바꾸고 나서 오히려 개발이 수월해질 수 있었습니다. 일단 디자인이 맘에 들게 나오니 화면 하나 만들 때마다 성취감도 컸고요.
 
-이전에 **[꽁냥 앱](https://kimdee.netlify.app/blog/%ED%95%99%EA%B5%90-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A1%9C-%EC%8B%9C%EC%9E%91%ED%95%9C-ios-%EC%95%B1-%EA%BD%81%EB%83%A5-%EB%A7%8C%EB%93%9C%EB%8A%94-%EC%9D%B4%EC%95%BC%EA%B8%B0-1-1/)**을 iOS 개발 공부하려고 처음 만들었을 때 오히려 이보다 페이지가 훨씬 많았지만, 디자인에 의존춘다는 느낌을 스스로  조금 받았는데요. 오히려 개발할 수  역량에 맞춰 디자인을 새로 해본 경험이 오히려 신기하고 재밌더라고요!
+이전에 **[꽁냥 앱](https://kimdee.netlify.app/blog/%ED%95%99%EA%B5%90-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%A1%9C-%EC%8B%9C%EC%9E%91%ED%95%9C-ios-%EC%95%B1-%EA%BD%81%EB%83%A5-%EB%A7%8C%EB%93%9C%EB%8A%94-%EC%9D%B4%EC%95%BC%EA%B8%B0-1-1/)**을 iOS 개발 공부하려고 처음 만들었을 때 오히려 이보다 페이지가 훨씬 많았지만, 디자인에 의존해서 부족한 개발실력을 감춘다는 느낌을 스스로  조금 받았는데요. 오히려 개발할 역량에 맞춰 디자인을 새로 해본 경험이 오히려 신기하고 재밌더라고요 
 
 이제 출시 이후 업데이트에서는 한동안 기획과 디자인을 수정할 일은 없고, 이미 만들어둔 기획대로 작업하면 될 거 같아서 개발자인 저 자신이 열심히 힘을 내보면 될 것 같습니다. 
 
@@ -248,11 +246,7 @@ FSCalendar 라이브러리를 이용했는데요.
 
 여태까지 읽어주셔서 감사합니다. 
 
-
-
 - - -
-
-
 
 연뮤로그 인스타그램을 업데이트 소식을 빠르게 받아보실 수 있어요. 
 
