Update Blog “연뮤로그-개발기-1-기획과-디자인”

--- a/content/blog/연뮤로그-개발기-1-기획과-디자인.md
+++ b/content/blog/연뮤로그-개발기-1-기획과-디자인.md
@@ -242,7 +242,7 @@ FSCalendar 라이브러리를 이용했는데요.
 
 이제 출시 이후 업데이트에서는 한동안 기획과 디자인을 수정할 일은 없고, 이미 만들어둔 기획대로 작업하면 될 거 같아서 개발자인 저 자신이 열심히 힘을 내보면 될 것 같습니다. 
 
-다음 2편에서는 연뮤로그 1.0 버전을 개발하면서 겪었던 고통, 개발한 feature들, 트러블 슈팅들을 공유하고, 3편에서는 앱 출시 및 심사후기를 공유하도록 하겠습니다. 
+다음 2편에서는 연뮤로그 1.0 버전을 개발하면서 겪었던 고통, 개발한 feature들, 트러블 슈팅을 공유하고, 3편에서는 앱 출시 및 심사후기를 공유하도록 하겠습니다. 
 
 여태까지 읽어주셔서 감사합니다. 
 
